2022-06-16  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.4.0 released