@@ -65,6 +65,7 @@ zero). Work-in-progress APIs can change at any time.
 * Utilities
   * [Measurement units utils](/include/kernaux/units.h) (*work in progress*)
     * [Example: To human](/examples/units_human.c)
+  * [Memory allocator](/include/kernaux/malloc.h) (*work in progress*)
   * [Memory map](/include/kernaux/memmap.h.in) (*non-breaking since* **0.4.0**)
     * [Example](/examples/memmap.c)
   * [printf format parser](/include/kernaux/printf_fmt.h) (*work in progress*)
@@ -148,6 +149,7 @@ explicitly included, use `--without-all`.
 
 * `--with[out]-cmdline` - command line parser
 * `--with[out]-io` - input/output
+* `--with[out]-malloc` - memory allocator
 * `--with[out]-memmap` - memory map
 * `--with[out]-ntoa` - itoa/ftoa
 * `--with[out]-printf` - printf
