@@ -11,6 +11,7 @@
 @comment_line_elf@#include <kernaux/elf.h>
 @comment_line_framebuffer@#include <kernaux/framebuffer.h>
 @comment_line_io@#include <kernaux/io.h>
+@comment_line_malloc@#include <kernaux/malloc.h>
 @comment_line_mbr@#include <kernaux/mbr.h>
 @comment_line_memmap@#include <kernaux/memmap.h>
 @comment_line_multiboot2@#include <kernaux/multiboot2.h>
