@@ -1,0 +1,12 @@
+#ifndef KERNAUX_INCLUDED_MALLOC
+#define KERNAUX_INCLUDED_MALLOC
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif
