@@ -1,3 +1,8 @@
+2022-06-17  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* configure.ac: Added package "malloc"
+	* include/kernaux/malloc.h: Added
+
 2022-06-16  Alex Kotov  <kotovalexarian@gmail.com>
 
 	libkernaux 0.4.0 released
